force-app/main/default/objects/Feature_Flag_Setting__mdt/Feature_Flag_Setting__mdt.object-meta.xml
<CustomObject>
    <description>will allow rollback</description>
    <label>Feature Flag Setting</label>
    <pluralLabel>Feature Flag Settings</pluralLabel>
</CustomObject>