force-app/main/default/objects/Feature_Flag_Setting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if this is active a process will run</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>